replays/errorlog-20181103-132046-0400-1541265646-32-32-0.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    if prospect_distance < min_distance and not in is_in_short_targets(prospect_position):
                                                 ^
SyntaxError: invalid syntax

